--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="container">
             <div class="masthead-subheading">Bienvenido a mi web</div>
             <div class="masthead-heading text-uppercase">ANA MOYA CORRECHER</div>
-            <a class="btn btn-primary btn-xl text-uppercase" href="#services">Cuéntame más</a>
+            <a class="btn btn-primary btn-xl text-uppercase" href="#services">Cambio 1 hecho</a>
         </div>
     </header>
     <!-- Services-->
